--- a/html/projects.html
+++ b/html/projects.html
@@ -1,122 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="../js/script.js"></script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projects</title>
-    <link rel="stylesheet" type="text/css" href="../css/main.css" />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="../images/project-avatarme.JPG"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="header">
-      <div class="logo">
-        <div class="square"></div>
-        <h2>
-          Meenakshi Bharadwaj <span id="slash">/</span
-          ><span> LEARNING DEVELOPER</span>
-        </h2>
-      </div>
-      <div id="ham-menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <div id="nav_bar">
-        <ul class="nav_links">
-          <li><a href="../index.html">About Me</a></li>
-          <li><a href="./resume.html">Resume</a></li>
-          <li><a href="./projects.html">Projects</a></li>
-          <li><a href="./contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-    <header class="head_title">
+
+<head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="../js/script.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Projects</title>
+  <link rel="stylesheet" type="text/css" href="../css/main.css" />
+  <link rel="icon" type="image/x-icon" href="../images/project-avatarme.JPG" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <div class="header">
+    <div class="logo">
       <div class="square"></div>
-      <h1>Projects</h1>
-    </header>
-    <header class="section_title">
-        <h3>Calculator</h3>
-        <p>
-          <a
-            target="_blank"
-            href="https://mbtions.github.io/calculator/"
-            class="buttons primary"
-            >Live Demo</a
-          >
-          <a href="https://github.com/mbtions/mbtions.github.io/tree/master/calculator" class="buttons">Repo Link</a>
-        </p>
-      </header>
-      <section class="container-box">
-        <h1>2023</h1>
-        <div class="details-container-box content-wrapper">
-          <!-- <ul class="org_details">
+      <h2>
+        Meenakshi Bharadwaj <span id="slash">/</span><span> APPLICATION DEVELOPER</span>
+      </h2>
+    </div>
+    <div id="ham-menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div id="nav_bar">
+      <ul class="nav_links">
+        <li><a href="../index.html">About Me</a></li>
+        <li><a href="./resume.html">Resume</a></li>
+        <li><a href="./projects.html">Projects</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+  <header class="head_title">
+    <div class="square"></div>
+    <h1>Projects</h1>
+  </header>
+  <header class="section_title">
+    <h3>Calculator</h3>
+    <p>
+      <a target="_blank" href="https://mbtions.github.io/calculator/" class="buttons primary">Live Demo</a>
+      <a href="https://github.com/mbtions/mbtions.github.io/tree/master/calculator" class="buttons">Repo Link</a>
+    </p>
+  </header>
+  <section class="container-box">
+    <h1>2023</h1>
+    <div class="details-container-box content-wrapper">
+      <!-- <ul class="org_details">
             <li><strong>Calculator</strong></li>
             <li>
               <i>Numeric Computations made easy</i>
             </li>
           </ul> -->
-          <div class="project-preview">
-            <img class="image-preview" src="../images/calculator-project-screenshot.png" alt="calculator project preview" width="50%" style="border-radius: 5px;">
-            <div class="middle">
-                <a href="https://mbtions.github.io/calculator/"><button>Go To Website</button></a>
-            </div>
-          </div>
-          <div class="project-details">
-          <ul>
-            <li>
-              Tech Stacks: 
-              <ul>
-                <li><b>JavaScript</b></li>
-                <li><b>HTML</b></li>
-                <li><b>CSS</b></li>
-              </ul>
-            </li>
-            <li>
-                The only challenge faced during this project was: <b>building</b> and <b>maintaining Expression String</b>
-            </li>
-          </ul>
-          </div>
+      <div class="project-preview">
+        <img class="image-preview" src="../images/calculator-project-screenshot.png" alt="calculator project preview"
+          width="50%" style="border-radius: 5px;">
+        <div class="middle">
+          <a href="https://mbtions.github.io/calculator/"><button>Go To Website</button></a>
         </div>
-      </section>
-    </main>
-    <div class="sizedbox"></div>
-    <header class="section_title">
-      <h3>C-Programs using JavaScript</h3>
-      <p>
-        <a
-          target="_blank"
-          href="https://mbtions.github.io/lab/C-Programs_JS/"
-          class="buttons primary"
-          >Live Demo</a
-        >
-        <a href="https://github.com/mbtions/mbtions.github.io/tree/master/lab/C-Programs_JS" class="buttons">Repo Link</a>
-      </p>
-    </header>
-    <section class="container-box">
-      <h1>2023</h1>
-      <div class="details-container-box content-wrapper">
-        <div class="project-preview">
-          <img class="image-preview" src="../images/c_programs_js.png" alt="c-programs using js project preview" width="50%" style="border-radius: 5px;">
-          <div class="middle">
-              <a href="https://mbtions.github.io/lab/C-Programs_JS/"><button>Go To Website</button></a>
-          </div>
-        </div>
-        <div class="project-details">
+      </div>
+      <div class="project-details">
         <ul>
           <li>
-            Tech Stacks: 
+            Tech Stacks:
             <ul>
               <li><b>JavaScript</b></li>
               <li><b>HTML</b></li>
@@ -124,12 +75,49 @@
             </ul>
           </li>
           <li>
-              The only challenge faced during this project was: <b>building logic using JS</b><br/><br/>It was fun doing this project.
+            The only challenge faced during this project was: <b>building</b> and <b>maintaining Expression String</b>
           </li>
         </ul>
+      </div>
+    </div>
+  </section>
+  </main>
+  <div class="sizedbox"></div>
+  <header class="section_title">
+    <h3>C-Programs using JavaScript</h3>
+    <p>
+      <a target="_blank" href="https://mbtions.github.io/lab/C-Programs_JS/" class="buttons primary">Live Demo</a>
+      <a href="https://github.com/mbtions/mbtions.github.io/tree/master/lab/C-Programs_JS" class="buttons">Repo Link</a>
+    </p>
+  </header>
+  <section class="container-box">
+    <h1>2023</h1>
+    <div class="details-container-box content-wrapper">
+      <div class="project-preview">
+        <img class="image-preview" src="../images/c_programs_js.png" alt="c-programs using js project preview"
+          width="50%" style="border-radius: 5px;">
+        <div class="middle">
+          <a href="https://mbtions.github.io/lab/C-Programs_JS/"><button>Go To Website</button></a>
         </div>
       </div>
-    </section>
+      <div class="project-details">
+        <ul>
+          <li>
+            Tech Stacks:
+            <ul>
+              <li><b>JavaScript</b></li>
+              <li><b>HTML</b></li>
+              <li><b>CSS</b></li>
+            </ul>
+          </li>
+          <li>
+            The only challenge faced during this project was: <b>building logic using JS</b><br /><br />It was fun doing
+            this project.
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
   </main>
   <div class="sizedbox"></div>
   <div class="sizedbox"></div>
@@ -141,12 +129,8 @@
     <header class="section_title">
       <h3>AutoCertiGen</h3>
       <p>
-        <a
-          target="_blank"
-          href="https://www.rajgurucollege.com/images/pdf/Journal-IJIAMR/7a.pdf"
-          class="buttons primary"
-          >Paper Link</a
-        >
+        <a target="_blank" href="https://www.rajgurucollege.com/images/pdf/Journal-IJIAMR/7a.pdf"
+          class="buttons primary">Paper Link</a>
         <a href="#" class="buttons">Repo Link</a>
       </p>
     </header>
@@ -155,15 +139,11 @@
       <div class="details-container-box content-wrapper">
         <ul class="org_details">
           <li>
-            <strong
-              >AutoCertiGen: An Android Application to Automate Generation of
-              Certificates</strong
-            >
+            <strong>AutoCertiGen: An Android Application to Automate Generation of
+              Certificates</strong>
           </li>
           <li>
-            <i
-              >Batch Certificates Automated Generation Android Application.</i
-            >
+            <i>Batch Certificates Automated Generation Android Application.</i>
           </li>
         </ul>
         <ul>
@@ -182,12 +162,7 @@
     <header class="section_title">
       <h3>CoVShorts</h3>
       <p>
-        <a
-          target="_blank"
-          href="https://ieeexplore.ieee.org/document/9596520"
-          class="buttons primary"
-          >Paper Link</a
-        >
+        <a target="_blank" href="https://ieeexplore.ieee.org/document/9596520" class="buttons primary">Paper Link</a>
         <a href="#" class="buttons">Repo Link</a>
       </p>
     </header>
@@ -221,7 +196,7 @@
   <footer>
     <div class="left">
       <p>
-        &copy;2024 Meenakshi Bharadwaj | App Developer <br />
+        &copy;2025 Meenakshi Bharadwaj | App Developer <br />
         Built with &#10084; by Meenakshi Bharadwaj
       </p>
     </div>
@@ -236,43 +211,35 @@
         <li>
           <h6>Write</h6>
           <p>
-            <a href="mailto:workbymeenakshi@gmail.com"
-              >workbymeenakshi@gmail.com</a
-            >
+            <a href="mailto:workbymeenakshi@gmail.com">workbymeenakshi@gmail.com</a>
           </p>
         </li>
         <li>
           <h6>Follow</h6>
           <ul>
             <li>
-              <a href="https://www.twitter.com/meenakshixd"
-                ><img src="../images/icon-twitter-48.png" width="15px"
-              /></a>
+              <a href="https://www.twitter.com/meenakshixd"><img src="../images/icon-twitter-48.png" width="15px" /></a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/mbtions"
-                ><img src="../images/icon-linkedin-30.png" width="15px"
-              /></a>
+              <a href="https://www.linkedin.com/in/mbtions"><img src="../images/icon-linkedin-30.png"
+                  width="15px" /></a>
             </li>
             <li>
-              <a href="https://www.github.com/mbtions"
-                ><img src="../images/icon-github-64.png" width="15px"
-              /></a>
+              <a href="https://www.github.com/mbtions"><img src="../images/icon-github-64.png" width="15px" /></a>
             </li>
             <li>
-              <a href="https://www.leetcode.com/meenakshibharadwaj"
-                ><img src="../images/icon-leetcode-48.png" width="15px"
-              /></a>
+              <a href="https://www.leetcode.com/meenakshibharadwaj"><img src="../images/icon-leetcode-48.png"
+                  width="15px" /></a>
             </li>
             <li>
-              <a href="https://www.hackerrank.com/meenakshibharad1"
-                ><img src="../images/icon-hackerrank-48.png" width="15px"
-              /></a>
+              <a href="https://www.hackerrank.com/meenakshibharad1"><img src="../images/icon-hackerrank-48.png"
+                  width="15px" /></a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
   </footer>
-  </body>
+</body>
+
 </html>
