--- a/html/contact.html
+++ b/html/contact.html
@@ -1,125 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="../js/script.js"></script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
-    <link rel="stylesheet" type="text/css" href="../css/main.css" />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="../images/project-avatarme.JPG"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="header">
-      <div class="logo">
-        <div class="square"></div>
-        <h2>
-          Meenakshi Bharadwaj <span id="slash">/</span
-          ><span> LEARNING DEVELOPER</span>
-        </h2>
-      </div>
-      <div id="ham-menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <div id="nav_bar">
-        <ul class="nav_links">
-          <li><a href="../index.html">About Me</a></li>
-          <li><a href="./resume.html">Resume</a></li>
-          <li><a href="./projects.html">Projects</a></li>
-          <li><a href="./contact.html">Contact</a></li>
-        </ul>
-      </div>
+
+<head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="../js/script.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact</title>
+  <link rel="stylesheet" type="text/css" href="../css/main.css" />
+  <link rel="icon" type="image/x-icon" href="../images/project-avatarme.JPG" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <div class="header">
+    <div class="logo">
+      <div class="square"></div>
+      <h2>
+        Meenakshi Bharadwaj <span id="slash">/</span><span> APPLICATION DEVELOPER</span>
+      </h2>
     </div>
-    <main>
-      <header class="head_title">
-        <div class="square"></div>
-        <h1>Let's talk</h1>
-      </header>
-      <div class="container-box">
-        <form action="/action_page.php">
-          <label for="fname">First Name<span>*</span>:</label><br />
-          <input type="text" id="fname" name="firstname" required /><br />
-          <label for="lname">Last Name<span>*</span>:</label><br />
-          <input type="text" id="lname" name="lastname" required /><br />
-          <label for="email">Email Address<span>*</span>:</label><br />
-          <input type="text" id="email" name="emailaddress" required /><br />
-          <label for="subject">Subject</label><br />
-          <input type="text" id="subject" name="subject" /><br />
-          <label for="message">Message:</label><br />
-          <textarea id="message" name="message"></textarea><br />
-          <button type="submit" value="Submit">Send</button>
-          <!-- <p>Your message has been sent! We will get back to you within 2 business days.</p> -->
-        </form>
-      </div>
-    </main>
-    <div class="sizedbox"></div>
-    <footer>
-      <div class="left">
-        <p>
-          &copy;2024 Meenakshi Bharadwaj | App Developer <br />
-          Built with &#10084; by Meenakshi Bharadwaj
-        </p>
-      </div>
-      <div class="right">
-        <ul class="connect">
-          <li>
-            <h6>Want to Help?</h6>
-            <p>
-              <a href="https://www.buymeacoffee.com/mbtions">Buy Me a Book</a>
-            </p>
-          </li>
-          <li>
-            <h6>Write</h6>
-            <p>
-              <a href="mailto:workbymeenakshi@gmail.com"
-                >workbymeenakshi@gmail.com</a
-              >
-            </p>
-          </li>
-          <li>
-            <h6>Follow</h6>
-            <ul>
-              <li>
-                <a href="https://www.twitter.com/meenakshixd"
-                  ><img src="../images/icon-twitter-48.png" width="15px"
-                /></a>
-              </li>
-              <li>
-                <a href="https://www.linkedin.com/in/mbtions"
-                  ><img src="../images/icon-linkedin-30.png" width="15px"
-                /></a>
-              </li>
-              <li>
-                <a href="https://www.github.com/mbtions"
-                  ><img src="../images/icon-github-64.png" width="15px"
-                /></a>
-              </li>
-              <li>
-                <a href="https://www.leetcode.com/meenakshibharadwaj"
-                  ><img src="../images/icon-leetcode-48.png" width="15px"
-                /></a>
-              </li>
-              <li>
-                <a href="https://www.hackerrank.com/meenakshibharad1"
-                  ><img src="../images/icon-hackerrank-48.png" width="15px"
-                /></a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-    </footer>
-  </body>
+    <div id="ham-menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div id="nav_bar">
+      <ul class="nav_links">
+        <li><a href="../index.html">About Me</a></li>
+        <li><a href="./resume.html">Resume</a></li>
+        <li><a href="./projects.html">Projects</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+  <main>
+    <header class="head_title">
+      <div class="square"></div>
+      <h1>Let's talk</h1>
+    </header>
+    <div class="container-box">
+      <form action="/action_page.php">
+        <label for="fname">First Name<span>*</span>:</label><br />
+        <input type="text" id="fname" name="firstname" required /><br />
+        <label for="lname">Last Name<span>*</span>:</label><br />
+        <input type="text" id="lname" name="lastname" required /><br />
+        <label for="email">Email Address<span>*</span>:</label><br />
+        <input type="text" id="email" name="emailaddress" required /><br />
+        <label for="subject">Subject</label><br />
+        <input type="text" id="subject" name="subject" /><br />
+        <label for="message">Message:</label><br />
+        <textarea id="message" name="message"></textarea><br />
+        <button type="submit" value="Submit">Send</button>
+        <!-- <p>Your message has been sent! We will get back to you within 2 business days.</p> -->
+      </form>
+    </div>
+  </main>
+  <div class="sizedbox"></div>
+  <footer>
+    <div class="left">
+      <p>
+        &copy;2025 Meenakshi Bharadwaj | App Developer <br />
+        Built with &#10084; by Meenakshi Bharadwaj
+      </p>
+    </div>
+    <div class="right">
+      <ul class="connect">
+        <li>
+          <h6>Want to Help?</h6>
+          <p>
+            <a href="https://www.buymeacoffee.com/mbtions">Buy Me a Book</a>
+          </p>
+        </li>
+        <li>
+          <h6>Write</h6>
+          <p>
+            <a href="mailto:workbymeenakshi@gmail.com">workbymeenakshi@gmail.com</a>
+          </p>
+        </li>
+        <li>
+          <h6>Follow</h6>
+          <ul>
+            <li>
+              <a href="https://www.twitter.com/meenakshixd"><img src="../images/icon-twitter-48.png" width="15px" /></a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/mbtions"><img src="../images/icon-linkedin-30.png"
+                  width="15px" /></a>
+            </li>
+            <li>
+              <a href="https://www.github.com/mbtions"><img src="../images/icon-github-64.png" width="15px" /></a>
+            </li>
+            <li>
+              <a href="https://www.leetcode.com/meenakshibharadwaj"><img src="../images/icon-leetcode-48.png"
+                  width="15px" /></a>
+            </li>
+            <li>
+              <a href="https://www.hackerrank.com/meenakshibharad1"><img src="../images/icon-hackerrank-48.png"
+                  width="15px" /></a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </footer>
+</body>
+
 </html>
