--- a/index.html
+++ b/index.html
@@ -1,156 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="./js/script.js"></script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meenakshi Bharadwaj</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link rel="icon" type="image/x-icon" href="./images/project-avatarme.JPG" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body id="index">
-    <div class="header">
-      <div class="logo">
-        <div class="square"></div>
-        <h2>
-          Meenakshi Bharadwaj <span id="slash">/</span
-          ><span> LEARNING DEVELOPER</span>
-        </h2>
+
+<head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="./js/script.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Meenakshi Bharadwaj</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
+  <link rel="icon" type="image/x-icon" href="./images/project-avatarme.JPG" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body id="index">
+  <div class="header">
+    <div class="logo">
+      <div class="square"></div>
+      <h2>
+        Meenakshi Bharadwaj <span id="slash">/</span><span> APPLICATION DEVELOPER</span>
+      </h2>
+    </div>
+    <div id="ham-menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div id="nav_bar">
+      <ul class="nav_links">
+        <li><a href="./index.html">About Me</a></li>
+        <li><a href="./html/resume.html">Resume</a></li>
+        <li><a href="./html/projects.html">Projects</a></li>
+        <li><a href="./html/contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="about-container">
+    <div class="profile-card">
+      <div class="profile">
+        <img id="profile-pic" src="./images/project-avatarme.JPG" alt="meenakshi's photo" width="45%" />
+        <h2>Meenakshi Bharadwaj</h2>
+        <div class="horizontal"></div>
+        <span>APPLICATION DEVELOPER</span>
       </div>
-      <div id="ham-menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <div id="nav_bar">
-        <ul class="nav_links">
-          <li><a href="./index.html">About Me</a></li>
-          <li><a href="./html/resume.html">Resume</a></li>
-          <li><a href="./html/projects.html">Projects</a></li>
-          <li><a href="./html/contact.html">Contact</a></li>
+      <div class="socials">
+        <ul>
+          <li>
+            <a href="https://www.twitter.com/meenakshixd"><img src="./images/icon-twitter-48.png" width="30px" /></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/mbtions/"><img src="./images/icon-linkedin-30.png" width="30px" /></a>
+          </li>
+          <li>
+            <a href="https://www.github.com/mbtions"><img src="./images/icon-github-64.png" width="30px" /></a>
+          </li>
+          <li>
+            <a href="https://www.leetcode.com/meenakshibharadwaj"><img src="./images/icon-leetcode-48.png"
+                width="30px" /></a>
+          </li>
+          <li>
+            <a href="https://www.hackerrank.com/meenakshibharad1"><img src="./images/icon-hackerrank-48.png"
+                width="30px" /></a>
+          </li>
         </ul>
       </div>
     </div>
-
-    <div class="about-container">
-      <div class="profile-card">
-        <div class="profile">
-          <img
-            id="profile-pic"
-            src="./images/project-avatarme.JPG"
-            alt="meenakshi's photo"
-            width="45%"
-          />
-          <h2>Meenakshi Bharadwaj</h2>
-          <div class="horizontal"></div>
-          <span>LEARNING DEVELOPER</span>
-        </div>
-        <div class="socials">
-          <ul>
+    <div class="about_me">
+      <h1 id="hello">Hello</h1>
+      <h3>Here's who I am &amp what I do</h3>
+      <p>
+        <a href="./html/resume.html" class="buttons primary">Resume</a>
+        <a href="./html/projects.html" class="buttons">Projects</a>
+      </p>
+      <p>
+        I am a passionate application developer who loves building applications
+        with user friendly Interfaces.
+      </p>
+    </div>
+  </div>
+  <!-- <div class="sizedbox"></div> -->
+  <footer>
+    <div class="left">
+      <p>
+        &copy;2025 Meenakshi Bharadwaj | App Developer <br />
+        Built with &#10084; by Meenakshi Bharadwaj
+      </p>
+    </div>
+    <div class="right">
+      <ul class="connect">
+        <li>
+          <h6>Want to Help?</h6>
+          <p>
+            <a href="https://www.buymeacoffee.com/mbtions">Buy Me a Book</a>
+          </p>
+        </li>
+        <li>
+          <h6>Write</h6>
+          <p>
+            <a href="mailto:workbymeenakshi@gmail.com">workbymeenakshi@gmail.com</a>
+          </p>
+        </li>
+        <li>
+          <h6>Follow</h6>
+          <ul class="socials">
             <li>
-              <a href="https://www.twitter.com/meenakshixd"
-                ><img src="./images/icon-twitter-48.png" width="30px"
-              /></a>
+              <a href="https://www.twitter.com/meenakshixd"><img src="./images/icon-twitter-48.png" width="15px" /></a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/mbtions/"
-                ><img src="./images/icon-linkedin-30.png" width="30px"
-              /></a>
+              <a href="https://www.linkedin.com/in/mbtions"><img src="./images/icon-linkedin-30.png" width="15px" /></a>
             </li>
             <li>
-              <a href="https://www.github.com/mbtions"
-                ><img src="./images/icon-github-64.png" width="30px"
-              /></a>
+              <a href="https://www.github.com/mbtions"><img src="./images/icon-github-64.png" width="15px" /></a>
             </li>
             <li>
-              <a href="https://www.leetcode.com/meenakshibharadwaj"
-                ><img src="./images/icon-leetcode-48.png" width="30px"
-              /></a>
+              <a href="https://www.leetcode.com/meenakshibharadwaj"><img src="./images/icon-leetcode-48.png"
+                  width="15px" /></a>
             </li>
             <li>
-              <a href="https://www.hackerrank.com/meenakshibharad1"
-                ><img src="./images/icon-hackerrank-48.png" width="30px"
-              /></a>
+              <a href="https://www.hackerrank.com/meenakshibharad1"><img src="./images/icon-hackerrank-48.png"
+                  width="15px" /></a>
             </li>
           </ul>
-        </div>
-      </div>
-      <div class="about_me">
-        <h1 id="hello">Hello</h1>
-        <h3>Here's who I am &amp what I do</h3>
-        <p>
-          <a href="./html/resume.html" class="buttons primary">Resume</a>
-          <a href="./html/projects.html" class="buttons">Projects</a>
-        </p>
-        <p>
-          I am a passionate learning developer who loves building applications
-          with user friendly Interfaces.
-        </p>
-      </div>
+        </li>
+      </ul>
     </div>
-    <!-- <div class="sizedbox"></div> -->
-    <footer>
-      <div class="left">
-        <p>
-          &copy;2024 Meenakshi Bharadwaj | Learning Developer <br />
-          Built with &#10084; by Meenakshi Bharadwaj
-        </p>
-      </div>
-      <div class="right">
-        <ul class="connect">
-          <li>
-            <h6>Want to Help?</h6>
-            <p>
-              <a href="https://www.buymeacoffee.com/mbtions">Buy Me a Book</a>
-            </p>
-          </li>
-          <li>
-            <h6>Write</h6>
-            <p>
-              <a href="mailto:workbymeenakshi@gmail.com"
-                >workbymeenakshi@gmail.com</a
-              >
-            </p>
-          </li>
-          <li>
-            <h6>Follow</h6>
-            <ul class="socials">
-              <li>
-                <a href="https://www.twitter.com/meenakshixd"
-                  ><img src="./images/icon-twitter-48.png" width="15px"
-                /></a>
-              </li>
-              <li>
-                <a href="https://www.linkedin.com/in/mbtions"
-                  ><img src="./images/icon-linkedin-30.png" width="15px"
-                /></a>
-              </li>
-              <li>
-                <a href="https://www.github.com/mbtions"
-                  ><img src="./images/icon-github-64.png" width="15px"
-                /></a>
-              </li>
-              <li>
-                <a href="https://www.leetcode.com/meenakshibharadwaj"
-                  ><img src="./images/icon-leetcode-48.png" width="15px"
-                /></a>
-              </li>
-              <li>
-                <a href="https://www.hackerrank.com/meenakshibharad1"
-                  ><img src="./images/icon-hackerrank-48.png" width="15px"
-                /></a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-    </footer>
-  </body>
+  </footer>
+</body>
+
 </html>
