added new projects and updated files

--- a/html/projects.html
+++ b/html/projects.html
@@ -42,6 +42,148 @@
     <h1>Projects</h1>
   </header>
   <header class="section_title">
+    <h3>SCM: Smart Contact Manager App</h3>
+    <p>
+      <a target="_blank" href="https://drive.google.com/file/d/1DdnNX3H-8xgiVuq9cq0MBR_0LHcLWmER/view?usp=sharing"
+        class="buttons primary">Walkthrough</a>
+      <a target="_blank" href="https://github.com/mbtions/Spring-Boot-Project" class="buttons">Repo Link</a>
+    </p>
+  </header>
+  <section class="container-box">
+    <h1>2025</h1>
+    <div class="details-container-box content-wrapper">
+      <!-- <ul class="org_details">
+            <li><strong>Calculator</strong></li>
+            <li>
+              <i>Numeric Computations made easy</i>
+            </li>
+          </ul> -->
+      <div class="project-preview">
+        <img class="image-preview" src="../images/scm_preview.png" alt=" scm project preview" width="50%"
+          style="border-radius: 5px;">
+        <div class="middle">
+          <a target="_blank"
+            href="https://drive.google.com/file/d/1DdnNX3H-8xgiVuq9cq0MBR_0LHcLWmER/view?usp=sharing"><button>Go To
+              Project Walkthrough</button></a>
+        </div>
+      </div>
+      <div class="project-details">
+        <ul>
+          <li>
+            During this project learned about: <b>database connec in spring boot</b>, <b>Spring MVC
+              architecture</b> and <b>Spring Security</b>
+          </li>
+          <li>Implemented:</li>
+          <ul>
+            <li>Authentication</li>
+            <li>Google and GitHub OAuth</li>
+            <li>Spring Security</li>
+            <li>Database Connectivity</li>
+            <li>CRUD Operations on Database using JPA Repository</li>
+          </ul>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <header class="head_title">
+    <div class="square"></div>
+    <h1>Projects</h1>
+  </header>
+  <header class="section_title">
+    <h3>TakeYourCare</h3>
+    <p>
+      <a target="_blank" href="#" class="buttons primary">Walkthrough</a>
+      <a target="_blank" href="https://github.com/mbtions/GB11_TakeYourCare" class="buttons">Repo Link</a>
+    </p>
+  </header>
+  <section class="container-box">
+    <h1>2025</h1>
+    <div class="details-container-box content-wrapper">
+      <!-- <ul class="org_details">
+            <li><strong>Calculator</strong></li>
+            <li>
+              <i>Numeric Computations made easy</i>
+            </li>
+          </ul> -->
+      <div class="project-preview">
+        <img class="image-preview" src="../images/takeyourcare_preview.png" alt=" takeyourcare project preview"
+          width="50%" style="border-radius: 5px;">
+        <div class="middle">
+          <a target="_blank" href="#"><button>Go To
+              Project Walkthrough</button></a>
+        </div>
+      </div>
+      <div class="project-details">
+        <ul>
+          <li>
+            Tech Stacks:
+            <ul>
+              <li><b>NLP Transformer models:</b></li>
+              <ul>
+                <li><i>BERT</i></li>
+                <li><i>RoBERTa</i></li>
+              </ul>
+              <li><b>Python</b></li>
+              <li><b>Flask</b></li>
+              <li><b>Ngrok</b></li>
+            </ul>
+          </li>
+          <li>
+            The only challenge faced during this project was: <b>finding</b> and <b>analysing the deciding factor</b> to
+            select the best-performing model
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <header class="section_title">
+    <h3>ChaloRidePe</h3>
+    <p>
+      <a target="_blank" href="https://drive.google.com/file/d/1iGW_bXdYJD47ii7aNjZ96u-SjX-5BSDL/view"
+        class="buttons primary">Walkthrough</a>
+      <a target="_blank" href="https://github.com/mbtions/GB09_ChaloRidePe" class="buttons">Repo Link</a>
+    </p>
+  </header>
+  <section class="container-box">
+    <h1>2024</h1>
+    <div class="details-container-box content-wrapper">
+      <!-- <ul class="org_details">
+            <li><strong>Calculator</strong></li>
+            <li>
+              <i>Numeric Computations made easy</i>
+            </li>
+          </ul> -->
+      <div class="project-preview">
+        <img class="image-preview" src="../images/chaloridepe_preview.png" alt=" chaloridepe project preview"
+          width="50%" style="border-radius: 5px;">
+        <div class="middle">
+          <a target="_blank"
+            href="https://drive.google.com/file/d/1iGW_bXdYJD47ii7aNjZ96u-SjX-5BSDL/view?usp=sharing"><button>Go To
+              Project Walkthrough</button></a>
+        </div>
+      </div>
+      <div class="project-details">
+        <ul>
+          <li>
+            Tech Stacks:
+            <ul>
+              <li><b>React Native Expo</b></li>
+              <li><b>Tailwind CSS</b></li>
+              <li><b>Neon Database</b></li>
+              <li><b>Clerk Auth</b></li>
+              <li><b>Stripe Payments</b></li>
+              <li><b>HERE Maps API</b></li>
+            </ul>
+          </li>
+          <li>
+            The only challenge faced during this project was: <b>implementing</b> and <b>rendering Map Routes using HERE
+              Maps</b> which was completely new to me.
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <header class="section_title">
     <h3>Calculator</h3>
     <p>
       <a target="_blank" href="https://mbtions.github.io/calculator/" class="buttons primary">Live Demo</a>
