--- a/html/resume.html
+++ b/html/resume.html
@@ -45,8 +45,9 @@
     <header class="section_title">
       <h3>Positions of Responsibilities</h3>
       <p id="download-btn">
-        <a href="https://docs.google.com/document/d/1iNSQU2wPkdD-DLOEh-LcJMPeA8XJ-fRoIpHRZ4SwbaQ/edit?usp=sharing"
+        <a target="_blank" href="https://drive.google.com/file/d/14tExQBnx-aEy5pnXduY4BpqD2qyznuPo/view?usp=sharing"
           class="buttons primary">Download</a>
+        <!-- https://docs.google.com/document/d/1iNSQU2wPkdD-DLOEh-LcJMPeA8XJ-fRoIpHRZ4SwbaQ/edit?usp=sharing -->
       </p>
     </header>
     <section class="container-box">
@@ -250,7 +251,8 @@
         <ul class="org_details">
           <li><strong>Zoho Workshop</strong></li>
           <li>Zoho</li>
-          <li><a href="#" target="_blank" style="color: 0050ff; text-decoration: none;">View Certificate</a></li>
+          <li><a href="https://drive.google.com/file/d/1bPJsrxvGnSJ5xi1qIxg4sH2a1BEvZ7tt/view?usp=sharing"
+              target="_blank" style="color: 0050ff; text-decoration: none;">View Certificate</a></li>
         </ul>
 
         <ul>
