--- a/html/projects.html
+++ b/html/projects.html
@@ -70,7 +70,7 @@
       <div class="project-details">
         <ul>
           <li>
-            During this project learned about: <b>database connec in spring boot</b>, <b>Spring MVC
+            During this project learned about: <b>Database Connectivity in spring boot</b>, <b>Spring MVC
               architecture</b> and <b>Spring Security</b>
           </li>
           <li>Implemented:</li>
