added repo links to publications

--- a/html/projects.html
+++ b/html/projects.html
@@ -273,7 +273,7 @@
       <p>
         <a target="_blank" href="https://www.rajgurucollege.com/images/pdf/Journal-IJIAMR/7a.pdf"
           class="buttons primary">Paper Link</a>
-        <a href="#" class="buttons">Repo Link</a>
+        <a href="https://github.com/mbtions/AutoCertiGenApp-master" class="buttons">Repo Link</a>
       </p>
     </header>
     <section class="container-box">
@@ -305,7 +305,7 @@
       <h3>CoVShorts</h3>
       <p>
         <a target="_blank" href="https://ieeexplore.ieee.org/document/9596520" class="buttons primary">Paper Link</a>
-        <a href="#" class="buttons">Repo Link</a>
+        <a href="https://github.com/mbtions/CoVShorts-NLP" class="buttons">Repo Link</a>
       </p>
     </header>
     <section class="container-box">
