added link to project walkthrough

--- a/html/projects.html
+++ b/html/projects.html
@@ -92,7 +92,8 @@
   <header class="section_title">
     <h3>TakeYourCare</h3>
     <p>
-      <a target="_blank" href="#" class="buttons primary">Walkthrough</a>
+      <a target="_blank" href="https://drive.google.com/file/d/18aqQv3YKIV3bmEGMiyklzMOXa-5twQDW/view?usp=sharing"
+        class="buttons primary">Walkthrough</a>
       <a target="_blank" href="https://github.com/mbtions/GB11_TakeYourCare" class="buttons">Repo Link</a>
     </p>
   </header>
@@ -109,7 +110,8 @@
         <img class="image-preview" src="../images/takeyourcare_preview.png" alt=" takeyourcare project preview"
           width="50%" style="border-radius: 5px;">
         <div class="middle">
-          <a target="_blank" href="#"><button>Go To
+          <a target="_blank"
+            href="https://drive.google.com/file/d/18aqQv3YKIV3bmEGMiyklzMOXa-5twQDW/view?usp=sharing"><button>Go To
               Project Walkthrough</button></a>
         </div>
       </div>
