updated profile pic

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Meenakshi Bharadwaj</title>
   <link rel="stylesheet" type="text/css" href="css/main.css" />
-  <link rel="icon" type="image/x-icon" href="./images/avatarmeenakshi.png" />
+  <link rel="icon" type="image/x-icon" href="./images/professionalMeenakshi.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
@@ -41,7 +41,7 @@
   <div class="about-container">
     <div class="profile-card">
       <div class="profile">
-        <img id="profile-pic" src="./images/avatarmeenakshi.png" alt="meenakshi's photo" width="45%" />
+        <img id="profile-pic" src="./images/professionalMeenakshi.png" alt="meenakshi's photo" width="45%" />
         <h2>Meenakshi Bharadwaj</h2>
         <div class="horizontal"></div>
         <span>APPLICATION DEVELOPER</span>
